--- a/ReastEstateWebApp/Pages/Agents/Index.cshtml
+++ b/ReastEstateWebApp/Pages/Agents/Index.cshtml
@@ -8,9 +8,9 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+@* <p> *@
+@*     <a asp-page="Create">Create New</a> *@
+@* </p> *@
 <table class="table">
     <thead>
         <tr>
@@ -47,7 +47,7 @@
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                @* <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a> *@
             </td>
         </tr>
 }
