--- a/ReastEstateWebApp/Pages/Properties/Edit.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Edit.cshtml
@@ -9,34 +9,40 @@
 <h1>Edit</h1>
 
 <h4>Property</h4>
-<hr />
+<hr/>
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Property.Id" />
+            <input type="hidden" asp-for="Property.Id"/>
             <div class="form-group">
-                <label asp-for="Property.Name" class="control-label"></label>
-                <input asp-for="Property.Name" class="form-control" />
+                <label asp-for="Property.Name" class="control-label">Property name</label>
+                <input asp-for="Property.Name" class="form-control"/>
                 <span asp-validation-for="Property.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Property.Description" class="control-label"></label>
-                <input asp-for="Property.Description" class="form-control" />
+                <label asp-for="Property.Description" class="control-label">Property description</label>
+                <textarea asp-for="Property.Description" class="form-control"></textarea>
                 <span asp-validation-for="Property.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Property.Price" class="control-label"></label>
-                <input asp-for="Property.Price" class="form-control" />
+                <label asp-for="Property.Price" class="control-label">Property price</label>
+                <input asp-for="Property.Price" class="form-control"/>
                 <span asp-validation-for="Property.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Property.PropertyStatus" class="control-label"></label>
-                <input asp-for="Property.PropertyStatus" class="form-control" />
+                <label asp-for="Property.PropertyStatus" class="control-label">Property status</label>
+                <input asp-for="Property.PropertyStatus" class="form-control"/>
                 <span asp-validation-for="Property.PropertyStatus" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Property.AgentId" class="control-label">Agent's name</label>
+                <select asp-for="Property.AgentId" class="form-control" asp-items="ViewBag.AgentId">
+                </select>
+                <span asp-validation-for="Property.AgentId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary"/>
             </div>
         </form>
     </div>
@@ -47,5 +53,5 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
