--- a/ReastEstateWebApp/Pages/Properties/Index.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Index.cshtml
@@ -6,50 +6,49 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" style="color: black; text-decoration: none">
+        <button type="button" class="btn btn-light">Create new property ad</button>
+    </a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Property[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property[0].Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Property[0].PropertyStatus)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Property) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PropertyStatus)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card-container">
+    @foreach (var item in Model.Property)
+    {
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="..." class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            @Html.DisplayFor(modelItem => item.Name)
+
+                        </h5>
+                        <p class="card-text">
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </p>
+                        <p class="card-text">
+                            @Html.DisplayFor(modelItem => item.Price)
+                        </p>
+                        <p class="card-text">
+                            @Html.DisplayFor(modelItem => item.PropertyStatus)
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">Last updated 3 mins ago</small>
+                        </p>
+                    </div>
+                    <a asp-page="./Edit" asp-route-id="@item.Id" style="color: black; text-decoration: none">
+                        <button type="button" class="btn btn-light">Edit</button>
+                    </a>
+                    <a asp-page="./Details" asp-route-id="@item.Id" style="color: black; text-decoration: none">
+                        <button type="button" class="btn btn-light">Details</button>
+                    </a>
+                    <a asp-page="./Delete" asp-route-id="@item.Id" style="color: black; text-decoration: none">
+                        <button type="button" class="btn btn-danger">Delete</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    }
+</div>
