--- a/ReastEstateWebApp/Pages/Shared/_Layout.cshtml
+++ b/ReastEstateWebApp/Pages/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>@ViewData["Title"] - ReastEstateWebApp</title>
+    <title>@ViewData["Title"] - RealEstateWebApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="css/Property/index.css"/>
     <link rel="stylesheet" href="~/ReastEstateWebApp.styles.css" asp-append-version="true"/>
 </head>
 <body>
@@ -23,8 +24,14 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Properties/Index">Properties</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Agents/Index">Agents</a>
+                    </li>
+                    @* <li class="nav-item"> *@
+                    @*     <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a> *@
+                    @* </li> *@
                 </ul>
                 <partial name="_LoginPartial"/>
             </div>
@@ -36,12 +43,6 @@
         @RenderBody()
     </main>
 </div>
-
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - ReastEstateWebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
-    </div>
-</footer>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
