--- a/ReastEstateWebApp/Pages/Properties/Delete.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Delete.cshtml
@@ -32,10 +32,10 @@
             @Html.DisplayFor(model => model.Property.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.PropertyStatus)
+            @Html.DisplayNameFor(model => model.PropertyStatus.PropertyType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Property.PropertyStatus)
+            @Html.DisplayFor(model => model.PropertyStatus.PropertyType)
         </dd>
     </dl>
     
