--- a/ReastEstateWebApp/Pages/Properties/Create.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Create.cshtml
@@ -12,7 +12,7 @@
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Property.Name" class="control-label"></label>
@@ -30,15 +30,20 @@
                 <span asp-validation-for="Property.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Property.PropertyStatus" class="control-label"></label>
-                <input asp-for="Property.PropertyStatus" class="form-control"/>
-                <span asp-validation-for="Property.PropertyStatus" class="text-danger"></span>
+                <label asp-for="PropertyStatus.PropertyType" class="control-label">Property status</label>
+                <select asp-for="PropertyStatus.PropertyType" class="form-control" asp-items="ViewBag.PropertyStatus">
+                </select>
+                <span asp-validation-for="PropertyStatus.PropertyType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Property.AgentId" class="control-label">Agent's name</label>
                 <select asp-for="Property.AgentId" class="form-control" asp-items="ViewBag.AgentId">
                 </select>
                 <span asp-validation-for="Property.AgentId" class="text-danger"></span>
+            </div>
+            <div>
+                <label asp-for="Property.Price" class="control-label"></label>
+                <input type="file" asp-for="Property.ImageFile" class="form-control"/>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary"/>
