--- a/ReastEstateWebApp/Pages/Properties/Details.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Details.cshtml
@@ -1,16 +1,17 @@
 @page
+@using ReastEstateWebApp.Models
 @model ReastEstateWebApp.Pages.Properties.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
+    Layout = "~/Pages/Shared/_UserLayout.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
     <h4>Property</h4>
-    <hr />
+    <hr/>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Property.Name)
@@ -31,14 +32,19 @@
             @Html.DisplayFor(model => model.Property.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Property.PropertyStatus)
+            @Html.DisplayNameFor(model => model.PropertyStatus.PropertyType)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Property.PropertyStatus)
+            @Html.DisplayFor(model => model.PropertyStatus.PropertyType)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Property?.Id">Edit</a> |
     <a asp-page="./Index">Back to List</a>
+    @if (Model.PropertyStatus.PropertyType == "Active")
+    {
+        <form method="post">
+            <button class="btn btn-light">Send Request</button>
+        </form>
+    }
 </div>
