--- a/ReastEstateWebApp/Pages/Properties/Index.cshtml
+++ b/ReastEstateWebApp/Pages/Properties/Index.cshtml
@@ -17,13 +17,12 @@
         <div class="card mb-3" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-md-4">
-                    <img src="..." class="card-img" alt="...">
+                    <img src="data:image/jpg;base64,@item.ImageData" class="card-img" alt="..." width="120px" height="120px">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <h5 class="card-title">
                             @Html.DisplayFor(modelItem => item.Name)
-
                         </h5>
                         <p class="card-text">
                             @Html.DisplayFor(modelItem => item.Description)
@@ -32,7 +31,7 @@
                             @Html.DisplayFor(modelItem => item.Price)
                         </p>
                         <p class="card-text">
-                            @Html.DisplayFor(modelItem => item.PropertyStatus)
+                            @Html.DisplayFor( modelItem => item.PropertyStatus.PropertyType)
                         </p>
                         <p class="card-text">
                             <small class="text-muted">Last updated 3 mins ago</small>
