--- a/ReastEstateWebApp/Pages/_ViewStart.cshtml
+++ b/ReastEstateWebApp/Pages/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
-    Layout = "_Layout";
+    // Layout = "_Layout";
+    if (User.IsInRole("Admin"))
+    {
+        Layout = "_Layout";
+    }
+    else
+    {
+        Layout = "_UserLayout";
+    }
 }
